Update to kojan-parent 6